@@ -373,6 +373,29 @@ opennms=# </computeroutput><command>ALTER TABLE node_old_11033991291234 RENAME T
         </listitem>
       </orderedlist>
     </section>
+
+    <section>
+      <title>Error: "- adding iplike database function... &lt;snip&gt;
+	org.postgresql.util.PSQLException: ERROR: could not access file
+	'&lt;snip&gt;/lib/iplike.so': Permission denied"</title>
+
+      <para>The PostgreSQL server cannot access the iplike.so file.  This
+	could be due to the file itself not having appropriate permissions
+	for the user that PostgreSQL runs as and/or one or more of the
+	parent directories of the iplike.so not having appropriate
+	permissions.</para>
+
+      <para>This error is seen even when running the installer as root
+	because it is not OpenNMS nor the installer that cannot access
+	the iplike.so file, but the PostgreSQL database.  The installer
+	instructs the PostgreSQL database to load the iplike.so and the
+	PostgreSQL database server usually runs as a non-root user, so it
+	is subject to filesystem access control checks like any other
+	normal user.  This is commonly seen when people install OpenNMS
+	into a home directory for root or another user and the permissions
+	on that home directory do not allow users other than the owner
+	of the directory access.</para>
+      </section>
   </section>
 
   <section>
